--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "this contain apis of shop kart",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,12 @@
   "bugs": {
     "url": "https://github.com/srikanthsree50/ShopApis/issues"
   },
-  "homepage": "https://github.com/srikanthsree50/ShopApis#readme"
+  "homepage": "https://github.com/srikanthsree50/ShopApis#readme",
+  "dependencies": {
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.4"
+  }
 }
